--- a/projectpage.css
+++ b/projectpage.css
@@ -158,7 +158,7 @@ div {
 }
 
 .headerMinimised::after {
-    background-color: rgba(255, 255, 255, 0) !important;
+    background-color: transparent !important;
 }
 
 .headerMinimised > #nameTitle > h2 {
@@ -394,7 +394,7 @@ div {
     align-items: center;
     justify-content:space-between;
     background-image: linear-gradient(to bottom, rgb(255, 255, 255, 0) 5%, rgba(255, 255, 255, 0));
-    background-color: rgba(255, 255, 255, 0);
+    /*background-color: rgba(255, 255, 255, 0);*/ /*Seemed to cause the white bar issue when scrolling*/
     padding: 1.8rem 5% 0.5rem 5%;
     transition: 0.3s;
     height: 0rem;
